syntax = "proto3";

option go_package = "./proto";

package order_service_package ;

message CreateOrderRequest{
    repeated Product products = 1;
    string Address = 2;
    string PhoneNumber = 3;
}

message Product {
    string Product_id = 1;
    int32 quantity  =2; 
}

message CreateOrderResponse{
    uint32 Order_id =1;
    float TotalAmount = 2;
}

message DeleteOrderRequest{
    uint32 Order_id=1;
}

message DeleteRequestResponse{
    bool status =1;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
    rpc DeleteOrder(DeleteOrderRequest) returns (DeleteRequestResponse) {}
}