syntax = "proto3";

option go_package = "./";

message SignUpRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string phoneNumber = 4;
    Access access = 5;
}

message SignUpResponse {
    int32 statusCode = 1;
    string message = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    int32 statusCode = 1;
    string message = 2;
    string token = 3;
}

message ValidateAdminTokenRequest {
    string token = 1;
    Access access = 2;
}

message ValidateAdminTokenResponse {
    int32 statusCode = 1;
    string message = 2;
}
message ValidateUserTokenRequest {
    string token = 1;
    Access access = 2;
}

message ValidateUserTokenResponse {
    int32 statusCode = 1;
    string message = 2;
}


enum Access {
    CUSTOMER = 0;
    ADMIN = 1;
}

service AuthService {
    rpc SignUpUser(SignUpRequest) returns (SignUpResponse) {}
    rpc LoginUser(LoginRequest) returns (LoginResponse) {}
    rpc ValidateTokenForAdmin(ValidateAdminTokenRequest) returns (ValidateAdminTokenResponse) {}
    rpc ValidateTokenForUser(ValidateUserTokenRequest) returns (ValidateUserTokenResponse) {}
}
